<resources>
    <string name="app_name">Voguely</string>

    <string name="HeyText">Hey!</string>
    <string name="SubtitleTextLogin">Welcome Back</string>
    <string name="SubtitleTextSignUp">Join Now</string>
    <string name="LoginTab">Login</string>
    <string name="SignUpTab">Sign Up</string>
    <string name="emailField">Email</string>
    <string name="passwordField">Password</string>
    <string name="loginButton">Login</string>
    <string name="signUpButton">Sign Up</string>
    <string name="termsConditionText">Terms and Conditions Apply*</string>
    <string name="login_tab">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">name item in almost black</string>
    <string name="item_price">some orange price in €</string>
    <string name="like_counter">rate number and star icon</string>
    <string name="reviews_counter">reviews number </string>
    <string name="searchbarHint">Search Product Name</string>
    <string name="homeMenuBottNavBar">Home</string>
    <string name="searchMenuBottNavBar">Search</string>
    <string name="cartMenuBottNavBar">Cart</string>
</resources>